@@ -238,6 +238,32 @@
 /* end fr30 sys target macros */
 #endif
 #endif
+#ifdef NL_TARGET_frv
+#ifdef sys_defs
+/* from syscall.h */
+/* begin frv sys target macros */
+ { "SYS_argv", 13  },
+ { "SYS_argvlen", 12  },
+ { "SYS_chdir", 14  },
+ { "SYS_chmod", 16  },
+ { "SYS_close", 3  },
+ { "SYS_exit", 1  },
+ { "SYS_fstat", 10  },
+ { "SYS_getpid", 8  },
+ { "SYS_gettimeofday", 19  },
+ { "SYS_kill", 9  },
+ { "SYS_lseek", 6  },
+ { "SYS_open", 2  },
+ { "SYS_read", 4  },
+ { "SYS_stat", 15  },
+ { "SYS_time", 18  },
+ { "SYS_times", 20  },
+ { "SYS_unlink", 7  },
+ { "SYS_utime", 17  },
+ { "SYS_write", 5  },
+/* end frv sys target macros */
+#endif
+#endif
 #ifdef NL_TARGET_i960
 #ifdef sys_defs
 /* from syscall.h */
